--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Galushkin Pavel's SV</title>
-    <link href="cv.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Galushkin Pavel's SV</title>
+<link href="cv.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<table width="80%" border="0" cellspacing="0" cellpadding="3">
-    <tbody>
+<table width="50%" border="0" align="center" cellpadding="3" cellspacing="0">
+  <tbody>
     <tr class="capt">
-        <td width="130"><img src="foto_1.jpg" width="119" height="155" alt="photo"/></td>
-        <td align="left" valign="top">
-            <div>GALUSHKIN PAVEL</div>
-            <br/>
-            <div>Phone: +380 97 4934636<br/>
-                Email: galushkin.paul@gmail.com<br/>
-                Skype: galushkin.paul@gmail.com
-            </div>
-        </td>
+      <td width="180"><img src="foto_1.jpg" width="166" height="218" alt="photo"/></td>
+      <td><table width="100%" border="0" cellspacing="0" cellpadding="1">
+          <tr valign="top">
+            <td><strong>GALUSHKIN PAVEL</strong><p></p></td>
+          </tr>
+          <tr>
+            <td width="170"><strong>Phone:</strong></td>
+            <td>+380 97 4934636</td>
+          </tr>
+          <tr>
+            <td><strong>Email / Skype:</strong></td>
+            <td>galushkin.paul@gmail.com</td>
+          </tr>
+          <tr>
+            <td><strong>Location:</strong></td>
+            <td>Dnepr, Ukraine</td>
+          </tr>
+          <tr>
+            <td height="30"><strong>Profiles:</strong></td>
+            <td height="30"><strong><a href="https://www.linkedin.com/in/pavel-galushkin-251aa1122/" title="LinkedIn profile" target="_blank">LinkedIn</a>
+                <a href="https://github.com/pro100boy" title="GitHub repository" target="_blank">GitHub</a></strong>
+            </td>
+          </tr>
+          
+          <tr>
+            <td height="30"><strong>Position desired:</strong></td>
+            <td height="30" class="developer">Java developer</td>
+          </tr>
+          <tr>
+            <td><strong>Employment:</strong></td>
+            <td>full employment</td>
+          </tr>
+          <tr>
+            <td><strong>Schedule:</strong></td>
+            <td>full day, flexible hours, distant job</td>
+          </tr>
+          </table>
+		  <br/><em>Ready for relocation, business trips</em>
     </tr>
-    </tbody>
-</table>
-<table width="80%" border="0" cellspacing="0" cellpadding="3">
-    <tbody>
-    <tr class="bg">
-        <td>Phone: +380 97 4934636</td>
-        <td>Email/Skype: galushkin.paul@gmail.com</td>
-    </tr>
-    </tbody>
+  </tbody>
 </table>
 
 </body>
